build_error_rerank_2.log
    Checking code-rag v0.1.0 (I:\01-Master_Code\Test-Labs\code-rag)
warning: unused import: `ListArray`
 --> src\storage.rs:2:124
  |
2 | use arrow_array::{RecordBatch, RecordBatchIterator, StringArray, Float32Array, Int32Array, Int64Array, FixedSizeListArray, ListArray};
  |                                                                                                                            ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `RecordBatch`
 --> src\search.rs:7:19
  |
7 | use arrow_array::{RecordBatch, StringArray, Float32Array, Int32Array, ListArray, Array};
  |                   ^^^^^^^^^^^

error[E0277]: the trait bound `Vec<std::string::String>: AsRef<[&str]>` is not satisfied
   --> src\embedding.rs:38:51
    |
 38 |             let results = reranker.rerank(query, &documents, true, None)?; 
    |                                    ------         ^^^^^^^^^ the trait `AsRef<[&str]>` is not implemented for `Vec<std::string::String>`
    |                                    |
    |                                    required by a bound introduced by this call
    |
    = help: the following other types implement trait `AsRef<T>`:
              `Vec<T, A>` implements `AsRef<Vec<T, A>>`
              `Vec<T, A>` implements `AsRef<[T]>`
    = note: required for `&Vec<std::string::String>` to implement `AsRef<[&str]>`
note: required by a bound in `fastembed::reranking::r#impl::<impl TextRerank>::rerank`
   --> C:\Users\ASCC\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\fastembed-5.8.1\src\reranking\impl.rs:130:25
    |
127 |     pub fn rerank<S: AsRef<str> + Send + Sync>(
    |            ------ required by a bound in this associated function
...
130 |         documents: impl AsRef<[S]>,
    |                         ^^^^^^^^^^ required by this bound in `fastembed::reranking::r#impl::<impl TextRerank>::rerank`

For more information about this error, try `rustc --explain E0277`.
warning: `code-rag` (lib) generated 2 warnings
error: could not compile `code-rag` (lib) due to 1 previous error; 2 warnings emitted
